--- a/src/style.css
+++ b/src/style.css
@@ -21,8 +21,21 @@ body {
   font-family: Mels;
 }
 
-header {
+header h1 {
   font-family: Spongebob;
+}
+
+.characters {
+  display: flex;
+  flex-wrap: wrap;
+  gap:20px;
+  padding: 10px;
+}
+.characters figure {
+  text-align: center;
+}
+.character {
+  height:100px;
 }
 
 main {
