--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,8 @@
 
 :root {
   --blue:rgb(0, 162, 255);
+  --black:rgb(6, 6, 65);
+  --rgb-black:6, 6, 65;
 }
 
 body {
@@ -29,6 +31,7 @@ body {
   height:100vh;
   font-family: Mels;
   background-color: var(--blue);
+  color:var(--black);
 }
 
 header {
@@ -36,7 +39,7 @@ header {
   justify-content: space-between;
   padding:20px;
   align-items: center; 
-  background: rgb(0,162,255);
+  background: var(--blue);
   background: linear-gradient(357deg, rgba(0,162,255,1) 0%, rgb(125, 209, 240) 100%); 
   width: min(1000px, 100%);
 }
@@ -45,7 +48,7 @@ header h1 {
   font-size: 2.5rem;
   font-family: Spongebob;
   color: rgb(255, 255, 0);
-  text-shadow: 3px 3px rgba(0,0,0,1);
+  text-shadow: 3px 3px 3px var(--black);
 }
 
 .characters {
@@ -60,8 +63,9 @@ header h1 {
   font-size: .8rem;
 }
 .character {
-  height:80px;
+  height:81px;
   transition: .2s;
+  filter: drop-shadow(2px 2px rgba(var(--rgb-black), .5));
 }
 .character:hover {
   transform: scale(150%);
@@ -71,7 +75,18 @@ header h1 {
 main {
   flex:auto;
   width: 100%;
-  /* background-image: url('./assets/images/background.jpg'); */
+  /* height: fit-content; */
+  /* border:solid 10px; */
+  /* overflow-x: scroll; */
+  /* display: flex; */
+  /* scrollbar-width: none; */
+}
+
+main img {
+  /* height:auto; */
+  /* border: solid red; */
+  display: block;
+  object-fit: contain;
 }
 
 /* body > * {
