--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,10 @@
 :root {
   --blue:rgb(0, 162, 255);
   --black:rgb(6, 6, 65);
+  --white:rgb(215, 239, 255);
   --rgb-black:6, 6, 65;
+  --rgb-blue:0, 162, 255;
+  --rgb-white:215, 239, 255;
 }
 
 body {
@@ -87,6 +90,7 @@ header h1 {
 main {
   flex:auto;
   width: 100%;
+  position: relative;
   /* height: fit-content; */
   /* border:solid 10px; */
   /* overflow-x: scroll; */
@@ -99,6 +103,40 @@ main img {
   /* border: solid red; */
   display: block;
   object-fit: contain;
+}
+
+.bubble {
+  width:100px;
+  height:100px;
+  border: solid 3px var(--white);
+  border-radius: 50%;
+  position: absolute;
+  top:0;
+  left:0;
+  background-color: rgba(255, 255, 255, .2);
+}
+
+.bubble .shine {
+  position: absolute;
+  border-radius: 50%;
+  transform: rotate(320deg);
+  /* background-color: red; */
+}
+
+.shine:first-child {
+  width:20px;
+  height:40px;
+  bottom:15px;
+  left:20px;
+  box-shadow: -10px 2px var(--white);
+}
+
+.shine:last-child {
+  width:10px;
+  height:25px;
+  top:15px;
+  right:20px;
+  box-shadow: 10px 2px var(--white);
 }
 
 /* body > * {
