--- a/src/style.css
+++ b/src/style.css
@@ -136,9 +136,31 @@ main img {
   box-shadow: 10px 2px white;
 }
 
-/* body > * {
-  border: solid 1px red;
-} */
+.popup {
+  border: solid 3px var(--white);
+  overflow: hidden;
+  border-radius: 5px;
+  position: absolute;
+  padding: 0;
+  backdrop-filter: blur(5px);
+  /* display: none; */
+}
+
+.popup li {
+  list-style: none;
+  padding: 10px;
+  background-color: rgba(var(--rgb-white), .8);
+  cursor: pointer;
+  transition: .2s;
+}
+
+.popup li:not(:last-child) {
+  border-bottom: solid 1px rgba(var(--rgb-black),.2);
+}
+
+.popup li:hover, .popup li[data-active="true"] {
+  background-color: var(--white);
+}
 
 footer {
   width: min(1000px, 100%);
