--- a/src/style.css
+++ b/src/style.css
@@ -143,7 +143,7 @@ main img {
   position: absolute;
   padding: 0;
   backdrop-filter: blur(5px);
-  /* display: none; */
+  display: none;
 }
 
 .popup li {
