--- a/src/style.css
+++ b/src/style.css
@@ -63,17 +63,35 @@ header h1 {
   padding: 10px;
   /* border:solid 1px; */
 }
-.characters figure {
+.character {
   text-align: center;
   font-size: .8rem;
+  position: relative;
 }
-.character {
+.character[data-found="true"] img, 
+.character[data-found="true"] figcaption {
+  opacity: .5;
+}
+.character img {
   height:81px;
   transition: .2s;
   filter: drop-shadow(2px 2px rgba(var(--rgb-black), .5));
+  position: relative;
 }
-.character:hover {
+.character img:hover {
   transform: scale(150%);
+}
+.character[data-found="true"]::after {
+  content: 'Found!';
+  position: absolute;
+  top:30%;
+  margin: auto;
+  left: 0;
+  right: 0;
+  font-size: 1.1rem;
+  font-weight: bold;
+  text-shadow: 2px 2px var(--black);
+  color: var(--white);
 }
 
 .timer {
@@ -93,8 +111,7 @@ main {
   flex:auto;
   width: 100%;
   position: relative;
-  /* TEST */
-  /* cursor: none; */
+  cursor: none;
 }
 
 main img {
